deployments/deploy/minio-statefulset.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-01-11T07-46-16Z
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000 # MinIO service port
            - containerPort: 9090 # MinIO console port
          volumeMounts:
            - name: minio-data
              mountPath: /data
            - name: minio-config
              mountPath: /root/.minio
          command:
            - minio
            - server
            - /data
            - "--console-address"
            - ":9090"
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
        - name: minio-config
          persistentVolumeClaim:
            claimName: minio-config-pvc
