deployments/deploy/openim-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openim-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openim-api
  template:
    metadata:
      labels:
        app: openim-api
    spec:
      containers:
        - name: openim-api-container
          image: openim-api:v3.9
          # imagePullPolicy: Never
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10002
            - containerPort: 12002
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
