deployments/deploy/openim-crontask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openim-crontask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crontask
  template:
    metadata:
      labels:
        app: crontask
    spec:
      containers:
        - name: crontask-container
          image: openim-crontask:v3.9
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
