deployments/deploy/openim-msggateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openim-msggateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openim-msggateway-server
  template:
    metadata:
      labels:
        app: openim-msggateway-server
    spec:
      containers:
        - name: openim-msggateway-container
          image: op-msggateway:v3.9
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10001
            - containerPort: 12001
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
