deployments/deploy/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - name: mongodb-port
      protocol: TCP
      port: 37017
      targetPort: 27017
  type: ClusterIP
