deployments/deploy/openim-msggateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openim-msggateway-service
spec:
  selector:
    app: openim-msggateway-server
  ports:
    - name: http-10001
      protocol: TCP
      port: 10001
      targetPort: 10001
    - name: prometheus-12001
      protocol: TCP
      port: 12001
      targetPort: 12001
  type: NodePort
