deployments/deploy/openim-msgtransfer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openim-msgtransfer-service
spec:
  selector:
    app: openim-msgtransfer-server
  ports:
    # TODO Need check port!!!
    - name: prometheus-12020
      protocol: TCP
      port: 12020
      targetPort: 12020
  type: ClusterIP
