deployments/deploy/openim-push-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openim-push-service
spec:
  selector:
    app: openim-push-server
  ports:
    - name: http-10170
      protocol: TCP
      port: 10170
      targetPort: 10170
    - name: prometheus-12170
      protocol: TCP
      port: 12170
      targetPort: 12170
  type: ClusterIP
