deployments/deploy/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis-port
      protocol: TCP
      port: 16379
      targetPort: 6379
